# Semantic-Aware-Navigation

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: semantic_costs.yaml
launch/: simulation.launch.py
semantic_navigation/: semantic_segmentation_node.py  visualization_node.py
urdf/: robot.gazebo  robot.urdf.xacro
worlds/: semantic_world.world
